ubah dadashboard html menjadi contoh html dan di masukan ke dalam folder halaman-utama

--- a/halaman-login/login.html
+++ b/halaman-login/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pasar Kreatif</title>
     <link rel="icon" href="../logo.jpg" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="login.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -48,7 +48,8 @@
       <div class="signup-section">
         <h2>Don't have an account</h2>
         <a href="../halaman-register/register.html" class="signup-button"
-          >Register</a>
+          >Register</a
+        >
       </div>
     </div>
   </body>
